# rembed

./: .gitignore  Cargo.toml  LICENSE  README.md  build_docker.sh  flake.nix
atree/: Cargo.toml  README.md  flake.nix
atree/src/: dynamic.rs  iter.rs  knn.rs  knn_new.rs  knn_old.rs  lib.rs  output.rs  query.rs  scalar.rs  simd.rs  svd.rs  tree.rs  vec_writer.rs
atree/tests/: simd.rs
benches/: fruitfly_8.rs
benchmark/: Cargo.toml  README.md  final_benchmark_1.sh  run_benchmarks.sh
benchmark/.sqlx/: query-06864ea3df5b8c486b9c19a696d96e263789b6d25ebaeeb6645b682b27be534a.json  query-1379c89cfbd87aa6bb3deb46bbfba99b2eb3d12f7a508d583ef89b244ee1fa05.json  query-1c451bc35ee64fae020d26681241ad9d00785bced4d5ead2b4e380d7a65bb0f5.json  query-1e415b46524a54f706cca2e7410a84d181a669f648dacccf337f03650a869000.json  query-1f6bb5fcaa522d137fd8adcbeaf6e80a23eb6c6acfaf5f98237574e1ffc0c19a.json  query-209707a5d897114a3a0c532913c0dfb7f7186aee86f60a1087eaf336c857e9db.json  query-29af5191be30a56f96bb777a0b7bdef9d59252b6a4b0937911f8d238502e1d1c.json  query-36062f2fd8fc3bd02ce77ccc2cb7b7ca12cf7983dfc27d202bd06173a039d105.json  query-4663bbf1e6cbb67b1c7c80c55d7aa92760f14e45cf62c19cd84261d77095f04c.json  query-4790575ea09b32bf365fd1101ae694e3b9c7cc480487027b5cd16d93d5f686e5.json  query-50f2122d07d310075741c7dd14c50b5d78e0430b68ba946326763cccc5db2c9e.json  query-608cfe52a25d8b1daff6f3b1e3623d7d91eb0313c129ecc1f19f5aa167e0ff8e.json  query-639828319671231b1367cce82e899234e19005079daecbaa125c972803f6d94f.json  query-643f3a32596e591ca5c914ddc707ec19d8c92ef79cbf918514bfe41423b4b0a1.json  query-72bce9262a8741e216074ac69f899eca78c81b548ad67837854d11b34d3be055.json  query-7fb050479d45f147d00b724838aee407d27638d9f43b633f156670e1d63e18c8.json  query-8cdc31fc280c6dbce153eb68ea20ecd3506d401b73714f79c8ff7889077a30ec.json  query-90ff098d610bc3f2dd3618634f569fad83d9af3f43012a653892712c1e2d2892.json  query-97e55e3190c4fcd2e41ec9f640a61655ae581fa5d30497ffb01971b7633ceea8.json  query-9b80cd933ce51492a0f731b635a2cb8f7cfb5723e4b1640816c1fe85e4c16858.json  query-ab762e640dfe0bc2cad8487937c5485699750cac799ce59948d2951048e2526d.json  query-b3d1fb32d0154dcc7aab9dcc085a4c452118f832e15e7b414e1a9501d7238c26.json  query-b966c1bfd433500caecaa4a28b7f591cc7fe9317eeab2bd5156e8d643f5858fe.json  query-bd5633b25b7dd79e79374bab0001c71fa74289f14e52e4dbda213b03be17ffdd.json  query-d106c0d9c68b4a57eefc654dd95c502100021b3069a38dc6d17d86aec6adb035.json  query-eaeff6431c801bdd02e37a2c6acd39dda8e793a4345d8498c754916b44e9d63c.json  query-f48a957942b02109258af1ee10bd2cc26c90ce04579b85c8264bf845158e1fae.json  query-fca43e32cef9f96b730094eeeaaa0afb1140887bc91ae9773d3f2dd1baf6a3ce.json
benchmark/migrations/: 20250602131829_graphs.down.sql  20250602131829_graphs.sql  20250604083103_calculate_positions.down.sql  20250604083103_calculate_positions.sql  20250607085822_repo_and_code_state.down.sql  20250607085822_repo_and_code_state.up.sql  20250608084048_measurements.up.sql  20250609080617_tests.down.sql  20250609080617_tests.up.sql  20250616102423_sync_diffie_hellman.down.sql  20250616102423_sync_diffie_hellman.up.sql  20250718092251_measuremnt_results_view.down.sql  20250718092251_measuremnt_results_view.up.sql  20250908151251_add_pie_chart_indices.down.sql  20250908151251_add_pie_chart_indices.up.sql  20260102180600_intrinsic_dim.down.sql  20260102180600_intrinsic_dim.up.sql  20260314144132_fscores.down.sql  20260314144132_fscores.up.sql  20260316155357_ref_cpu_cycles.down.sql  20260316155357_ref_cpu_cycles.up.sql
benchmark/poi/: .gitignore  Cargo.toml
benchmark/poi/src/: category.rs  classify.rs  extract.rs  main.rs  poi.rs  project.rs
benchmark/snn_datasets/: .gitignore  download.py  flake.nix
benchmark/snn_datasets/csv_output/: sift_query.csv
benchmark/src/: benchmark.rs  cleanup.rs  code_state.rs  correctness_test.rs  fscore.rs  generate_graphs.rs  generate_positions.rs  intrinsic_dim.rs  job_manager.rs  lib.rs  load_data.rs  main.rs  runner.rs  statistics.rs  synthetic_data.rs
benchmark/src/benchmark/: distribution_bench.rs  perf_measurement.rs  runner.rs
boost-rtree/: Cargo.toml  boost_rtree_wrapper.cpp  boost_rtree_wrapper.h  build.rs
cgal/: .gitignore  Cargo.toml  build.rs  cgal_wrapper.cpp  cgal_wrapper.h
embedder-cli/: Cargo.toml  README.md
embedder-cli/src/: main.rs
loss_eval/: loss_measurements.csv  loss_measurements_2.csv  loss_measurements_3.csv  loss_measurements_4.csv  plot_loss.R  plot_sweep.R
nanoflann/: Cargo.toml  build.rs  nanoflann_wrapper.cpp  nanoflann_wrapper.h
nanoflann/src/: bindings.rs  lib.rs
py-snn/: Cargo.toml
py-snn/src/: lib.rs
reproducibility-cli/: Cargo.toml  README.md
reproducibility-cli/data/download_scripts/: download_clustering.py  download_clustering.sh  download_distributions.sh  download_embedding.sh  download_nn.sh  download_poi.sh  nn_download_to_csv.py
reproducibility-cli/src/: benchmark.rs  lib.rs  main.rs  synthetic_data.rs
simulation/: Cargo.toml
simulation/src/: lib.rs  main.rs  radius_reduction.rs
sklearn/: Cargo.toml
sklearn/src/: lib.rs
sprk/: Cargo.toml  README.md
sprk/src/: dynamic.rs  iter.rs  lib.rs  query.rs  svd.rs  tree.rs
sprk/tests/: simd.rs
src/: agrid.rs  atree.rs  ball_tree.rs  boost_rtree.rs  cgal_kdtree.rs  dim_reduction.rs  dvec.rs  dyn_atree.rs  dyn_sprk.rs  dynamic_queries.rs  embedder.rs  embedding.rs  gpu_brute_force.rs  graph.rs  grid.rs  hnsw.rs  intrinsic_dimension.rs  kd_tree.rs  kiddo.rs  lib.rs  lossy_queries.rs  lsh.rs  main.rs  measured_lsh.rs  nabo.rs  naive_atree.rs  naive_snn.rs  naive_sprk.rs  nanoflann.rs  neighbourhood.rs  orthtree.rs  parsing.rs  py_snn.rs  quadtree.rs  query.rs  random_projection_lsh.rs  sif.rs  sklearn.rs  snn.rs  sprk.rs  (+3 more)
src/atree/: simd.rs
src/dyn_embed/: dyn_dynamic_query.rs  dyn_sprk.rs  dyn_vec.rs  mod.rs
tests/: simd.rs
wembed-snn/: Cargo.toml  build.rs  eign.cpp  eign.h  snn.cpp  snn.h  snn_d10.cpp  snn_d12.cpp  snn_d14.cpp  snn_d16.cpp  snn_d2.cpp  snn_d4.cpp  snn_d6.cpp  snn_d8.cpp  wembed_snn_wrapper.cpp  wembed_snn_wrapper.h
wembed-snn/src/: bindings.rs
(+10 files in other folders)
