[workspace]
members = [
    ".",
    "benchmark",
    # "nanoflann"
]

[package]
name = "rembed"
version = "0.1.0"
edition = "2024"


[dependencies]
acap = "0.4.0"
ball-tree = "0.5.1"
crossbeam = "0.8.4"
fnntw = "0.4.1"
kdtree = "0.7.0"
kiddo = "5.0.3"
memmap = "0.7.0"
nabo = "0.5.0"
nalgebra = "0.33.2"
nanoflann = { version = "0.1.0", path = "nanoflann", optional = true }
neighbourhood = "0.0.1"
rand = "0.9.1"
rayon = "1.10.0"
rstar = "0.12.2"
sha2 = "0.10.9"
sif-kdtree = "0.7.0"
vec-vp-tree = "0.1.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
debug = true


[[bench]]
name = "fruitfly_8"
harness = false
