[workspace]
members = [
    ".",
    "atree",
    "benchmark",
    "benchmark/poi",
    "simulation",
    # "nanoflann"
    # "sklearn"
]

[package]
name = "rembed"
version = "0.1.0"
edition = "2024"
default-run = "rembed"


[dependencies]
acap = "0.4.0"
atree = { path = "atree", features = ["internals"] }
crossbeam = "0.8.4"
# kiddo = { version = "5.0.3", features = ["simd"] }
kiddo = { version = "5.0.3" }
memmap = "0.7.0"
nabo = "0.5.0"
nanoflann = { version = "0.1.0", path = "nanoflann", optional = true }
boost-rtree = { version = "0.1.0", path = "boost-rtree", optional = true }
cgal = { version = "0.1.0", path = "cgal", optional = true }
wembed-snn = { version = "0.1.0", path = "wembed-snn", optional = true }
sklearn = { version = "0.1.0", path = "sklearn", optional = true }
neighbourhood = "0.0.1"
rand = "0.9.1"
rayon = "1.10.0"
rustc-hash = "2.1.0"
sha2 = "0.10.9"
sif-kdtree = "0.7.0"
vec-vp-tree = "0.1.1"
linreg = "0.2.0"
quadtree = "0.5.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
nanoflann = ["dep:nanoflann"]
boost-rtree = ["dep:boost-rtree"]
cgal = ["dep:cgal"]
wembed-snn = ["dep:wembed-snn"]
sklearn = ["dep:sklearn"]

[profile.release]
debug = true
