[package]
name = "atree"
version = "0.1.0"
edition = "2024"

[dependencies]
simd-lookup = { version = "0.1.0", optional = true }
wide = { version = "0.8", optional = true }
# nalgebra = { git = "https://github.com/wembed-pdf/nalgebra", optional = true }
num-traits = { version = "0.2",  default-features = false }
# nalgebra-lapack = { git = "https://github.com/wembed-pdf/nalgebra", default-features = false, features = ["lapack-openblas"] }
# openblas-src = {version = "0.10.0", features = ["system"]}
faer-svd = { version = "0.17.1", optional = true }
faer-core = { version = "0.17.1", optional = true }
dyn-stack = { version = "0.13.2", optional = true }

[features]
default = ["simd-compress", "svd"]
simd-compress = ["dep:simd-lookup", "dep:wide"]
svd = ["faer-svd", "faer-core", "dyn-stack"]
