[package]
name = "atree"
version = "0.1.0"
edition = "2024"

[dependencies]
simd-lookup = { version = "0.1.0", optional = true }
wide = { version = "0.8", optional = true }
num-traits = { version = "0.2",  default-features = false }
faer-svd = { version = "0.17.1", optional = true }
faer-core = { version = "0.17.1", optional = true }
dyn-stack = { version = "0.13.2", optional = true }

[features]
default = ["simd-compress", "svd"]
simd-compress = ["dep:simd-lookup", "dep:wide"]
svd = ["faer-svd", "faer-core", "dyn-stack"]
