[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
indicatif = "0.17.11"
rayon = "1.10.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "bigdecimal"] }
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
