[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
rayon = "1.10.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Utilities
dotenv = "0.15.0"
sha2 = "0.10"
chrono = "0.4"
gethostname = "0.5"
indicatif = "0.17.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
